--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">anothertest</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+	<string name="new_show_message">This is the fucking new message</string>
 </resources>
